# atlas-memory

./: .coverage  .gitignore  MEMORY_IMPLEMENTATION_PLAN.md  MEMORY_REDESIGN.md  README.md  SPEC.md  pyproject.toml
docs/: ALWAYS_ON_SPEC.md  ATLAS_IDENTITY_RESEARCH_REPORT.md  ATLAS_NEXT_PHASE_SYNTHESIS.md  ATLAS_PRODUCTION_PHASE_PLAN.md  FINAL_PRODUCT_RUNBOOK.md  HEARTBEAT_IMPLEMENTATION_PLAN.md  HEARTBEAT_PERSONHOOD_ARCHITECTURE.md  MEMORY_IMPLEMENTATION_PLAN.md  RESEARCH_PROGRAM.md  SPEC.md
migrations/: 2026-04-01_session_metadata_parity.sql  2026-04-02_active_state.sql  2026-04-02_agent_namespace_foundation.sql  2026-04-02_commitments.sql  2026-04-02_corrections.sql  2026-04-02_decision_outcomes.sql  2026-04-02_directives.sql  2026-04-02_patterns.sql  2026-04-02_timeline_event_rollup_kinds.sql  2026-04-02_timeline_events.sql  2026-04-03_agent_namespace_hardening.sql  2026-04-03_memory_schema_transition.sql  2026-04-03_platform_text.sql  2026-04-03_session_handoffs.sql  2026-04-04_reflections.sql  2026-04-05_case_memory.sql  2026-04-05_compatibility_view_retirement.sql  2026-04-05_migration_hygiene_cleanup.sql  2026-04-06_background_jobs.sql  2026-04-06_heartbeat_namespace_backfill.sql  2026-04-06_heartbeat_presence.sql  2026-04-06_temporal_graph_layer.sql
tests/: conftest.py  test_bridge.py  test_bridge_server.py  test_client.py  test_config.py  test_curator_runtime.py  test_daemon.py  test_e2e.py  test_enrichment.py  test_eval_harness.py  test_eval_harness_synthetic.py  test_fact_extraction.py  test_heartbeat.py  test_hermes_provider.py  test_models.py  (+5 more)
(+40 files in other folders)
