[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "memory"
version = "0.1.0"
description = "Async memory client for storing episodic and semantic memory in Supabase."
readme = "SPEC.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Memory" }
]
dependencies = [
  "supabase>=2.28.3,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/SPEC.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.force-include]
"src/memory/data/nrc_lexicon.json" = "memory/data/nrc_lexicon.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
